--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   font-weight: 400;
   color:#242424 ;
   background-color: rgba(255, 255, 255, 0.87);
+  height: 100%;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
