--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   line-height: 1.5;
   font-weight: 400;
   color:#242424 ;
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: rgb(248, 248, 248);
   height: 100%;
 
   font-synthesis: none;
@@ -16,4 +16,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.cursor-ice-cream {
+  cursor: url('/palito.svg');
+}
