--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: "Nunito", system-ui;  line-height: 1.5;
   font-weight: 400;
   color:#242424 ;
   background-color: rgb(248, 248, 248);
